# instinct.cpp

./: .devcontainer.json  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  conanfile.py
modules/instinct-agent/: CMakeLists.txt
modules/instinct-agent/include/: AgentGlobals.hpp  AgentTestGlobals.hpp
modules/instinct-agent/include/agent/: BaseSolver.hpp  BaseWorker.hpp
modules/instinct-agent/include/executor/: BaseAgentExecutor.hpp  IAgentExecutor.hpp
modules/instinct-agent/include/toolkit/: BaseFunctionTool.hpp  BaseFunctionToolkit.hpp  BaseSearchTool.hpp  IFunctionTool.hpp  IFunctionToolkit.hpp  LambdaFunctionTool.hpp  LocalToolkit.hpp  ProtoMessageFunctionTool.hpp
modules/instinct-agent/test/: CMakeLists.txt
modules/instinct-agent/test/experiments/: TestFunctionCall.cpp
modules/instinct-apps/doc-agent/: CMakeLists.txt  README.md
modules/instinct-apps/doc-agent/src/: doc-agent.cpp
modules/instinct-apps/mini-assistant/: CMakeLists.txt  README.md
modules/instinct-apps/mini-assistant/src/: mini-assistant.cpp
modules/instinct-assistant/: CMakeLists.txt
modules/instinct-assistant/assets/: CMakeLists.txt
modules/instinct-assistant/db_migration/: 001-create-tables.sql
modules/instinct-assistant/include/: AssistantGlobals.hpp  AssistantTestGlobals.hpp
modules/instinct-assistant/include/instinct/: AssistantGlobals.hpp  AssistantTestGlobals.hpp  assistant_global.hpp  assistant_test_global.hpp
modules/instinct-assistant/test/: CMakeLists.txt
modules/instinct-assistant/test/_assets/: Antimonumento 5J .txt  Double sovereign.txt
modules/instinct-assistant/test/experiments/: TestFunctionCall.cpp  test_function_call.cpp
modules/instinct-core/: CMakeLists.txt
modules/instinct-core/include/: CoreGlobals.hpp
modules/instinct-core/include/exception/: ClientException.hpp  InstinctException.hpp
modules/instinct-core/include/functional/: BaseRunnable.hpp  IContext.hpp  IRunnable.hpp  IStepFunction.hpp  JSONContextPolicy.hpp  ReactiveFunctions.hpp  RunnableChain.hpp  StepFunctions.hpp  Xn.hpp
modules/instinct-core/include/instinct/: CoreTestGlobals.hpp  core_all.hpp  core_global.hpp  core_test_global.hpp
modules/instinct-core/include/ioc/: ManagedApplicationContext.hpp
modules/instinct-core/include/tools/: Assertions.hpp  ChronoUtils.hpp  CodecUtils.hpp  DocumentUtils.hpp  HashUtils.hpp  HttpRequest.hpp  HttpRestClient.hpp  IOUtils.hpp  MetadataSchemaBuilder.hpp  ProtobufUtils.hpp  RandomUtils.hpp  SimpleHttpClient.hpp  SnowflakeIDGenerator.hpp  StringUtils.hpp  SystemUtils.hpp
modules/instinct-core/src/: CoreGlobals.hpp  CoreTypes.hpp
modules/instinct-core/src/chain/: Chain.hpp
modules/instinct-core/src/document/: CharacterTextSplitter.hpp  Document.hpp  LanguageSplitters.hpp  RecursiveCharacterTextSplitter.hpp  TextSplitter.hpp
modules/instinct-core/src/functional/: IRunnable.hpp  ReactiveFunctions.hpp
modules/instinct-core/src/message/: AIMessage.hpp  ChatMessage.hpp  FunctionMessage.hpp  HumanMessage.hpp  Message.hpp  SystemMessage.hpp
modules/instinct-core/src/model/: BaseChatModel.hpp  BaseEmbeddingModel.hpp  BaseLLM.hpp  BaseLanguageModel.hpp  ChatGeneration.hpp  ChatResult.hpp  Embeddings.hpp  Generation.hpp  LLMResult.hpp
modules/instinct-core/src/prompt/: AIMessagePromptTemplate.hpp  BaseChatPromptTemplate.hpp  BaseStringMessagePromptTemplate.hpp  ChatMessagePromptTemplate.hpp  ChatPromptTemplate.hpp  ChatPromptValue.hpp  ExampleSelector.hpp  FewShotChatMessagePromptTemplate.hpp  FewShotPromptTemplate.hpp  Forwards.hpp  HumanMessagePromptTemplate.hpp  LengthBasedExampleSelector.h  MessagePromptTemplate.hpp  MutableExampleSelector.hpp  PassthroughExampleSelector.hpp  PlainPromptTemplate.hpp  PromptTemplate.hpp  PromptValue.hpp  StringPromptTemplate.hpp  StringPromptValue.hpp  SystemMessagePromptTemplate.h
modules/instinct-core/src/tokenizer/: BPETokenRanksReader.hpp  GPT2BPEFileReader.hpp  (+1 more)
modules/instinct-core/test/: CMakeLists.txt  chain.yaml  test_json.cpp
modules/instinct-data/: CMakeLists.txt
modules/instinct-data/include/: DataGlobals.hpp
modules/instinct-data/test/: CMakeLists.txt
modules/instinct-examples/doc-agent/: CMakeLists.txt  README.md
modules/instinct-examples/mini-assistant/: CMakeLists.txt  README.md
modules/instinct-examples/quick-start/: CMakeLists.txt  quick_start.cpp
modules/instinct-llm/: CMakeLists.txt
modules/instinct-llm/include/: LLMGlobals.hpp  LLMObjectFactory.hpp  LLMTestGlobals.hpp  llm_all.hpp
modules/instinct-llm/src/: All.hpp  LLMGlobals.hpp  LLMTestGlobals.hpp  ModelGlobals.hpp
modules/instinct-llm/test/: CMakeLists.txt
modules/instinct-proto/: CMakeLists.txt  agent.proto  jina_api.proto  llm.proto  retrieval.proto
modules/instinct-proto/src/: agent.proto  assistant_api.proto  assistant_api_v2.proto  chat_completion_api.proto  core.proto  data.proto  embedding_api.proto  llm.proto  ollama_api.proto  retrieval.proto
modules/instinct-retrieval/: CMakeLists.txt
modules/instinct-retrieval/include/: RetrievalGlobals.hpp  RetrievalTestGlobals.hpp  RetrieverObjectFactory.hpp
modules/instinct-retrieval/src/: RetrievalGlobals.hpp
modules/instinct-retrieval/test/: CMakeLists.txt
modules/instinct-server/: CMakeLists.txt
modules/instinct-server/include/: ServerGlobals.hpp
modules/instinct-server/test/: CMakeLists.txt  TestChainServer.cpp  test_chain_server.cpp
modules/instinct-transformer/: CMakeLists.txt
modules/instinct-transformer/include/: config.hpp  globals.hpp  layers.hpp  model.hpp  model_factory.hpp  models.hpp  ops.hpp  tokenizer.hpp
modules/instinct-transformer/test/: CMakeLists.txt  test_bge_m3_embedding.cpp  test_bge_m3_reranker.cpp
modules/langchain-core/: CMakeLists.txt
modules/langchain-core/src/: All.hpp  BasePromptTemplate.cpp  BasePromptTemplate.h  CoreFunctions.h  CoreGlobals.h  CoreGlobals.hpp  CoreTypes.h  CoreTypes.hpp  Functions.h  LangchainCore.h  PromptValue.h  StringPromptTemplate.cpp  StringPromptTemplate.h  Types.h  types.h
modules/langchain-core/test/: CMakeLists.txt  test_json.cpp
(+1254 files in other folders)
